--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "SCROD_ETHERNET_Example_SendBack"]
 	path = SCROD_ETHERNET_Example_SendBack
 	url = https://github.com/RPeschke/SCROD_ETHERNET_Example_SendBack.git
+[submodule "vhdl_csv_io"]
+	path = vhdl_csv_io
+	url = https://github.com/RPeschke/vhdl_csv_io.git
+[submodule "vhdl_build_system"]
+	path = vhdl_build_system
+	url = https://github.com/RPeschke/vhdl_build_system.git
+[submodule "makeise"]
+	path = makeise
+	url = https://github.com/RPeschke/makeise.git
